# Cardio-assistant

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Readme.Md  __main__.py  agent.py  agent_conversation_examples.md  agent_executor.py  agentcard.json  config.py  fly.toml  provider_verification_summary.md  pyproject.toml  roadmap.md  test_a2a_agent.py  test_provider_verification_focused.py  tools.py
.well-known/: agent.json
Tests/legacy_tests/: README.md  test_a2a_agent.py  test_npi_validation.py  test_provider_verification_balanced.py
documents/: A2A.md  A2A_specification.md  implementation_guidance.md  ogprompt.md  pythonsdk.md
test-banter/: provider-verification-banter.md
tests/: README.md  __init__.py  test_runner.py
tests/behavior/: test_guardrails.py  test_scheduling.py  test_state_markers.py  test_workflow_order.py
tests/fixtures/: referral_scenarios.yaml
tests/tools/: test_provider_verification.py
walter_reed_cardiology_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
